projeto licenca elo

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <body>
 
   <!-- Botão no canto superior direito -->
-  <a href="./valorMensal.html" class="btn-top-right">
+  <a href="https://valormensal.vercel.app/" class="btn-top-right">
     <button>Calcular Valor Mensal de Licenças</button>
   </a>
 
