--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
   <!-- Botão no canto superior direito -->
   <a href="https://valormensal.vercel.app/" class="btn-top-right">
-    <button>Calcular Valor Mensal de Licenças</button>
+    <button>Valor Mensal de Licenças</button>
   </a>
 
   <h2>Estimativa de Licenças</h2>
